finish Master Role

--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -136,8 +136,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="pages-recover-password.html">
-                                                Organization Role
+                                            <a href="@Url.Action("RoleList","MasterData")">
+                                                Organization Role 
                                             </a>
                                         </li>
                                         <li>
