--- a/Klinik.Web/Views/MasterData/RoleList.cshtml
+++ b/Klinik.Web/Views/MasterData/RoleList.cshtml
@@ -1,12 +1,12 @@
-﻿@model Klinik.Web.Models.MasterData.OrganizationModel
+﻿@model Klinik.Web.Models.MasterData.RoleModel
 
 @{
-    ViewBag.Title = "OrganizationList";
+    ViewBag.Title = "RoleList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
-
 
 <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data</button>
 
@@ -16,17 +16,16 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">List Organisasi</h5>
+        <h5 class="panel-title">List Role</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
-            <table id="tbOrganization" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="tbRole" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
                         <th>Id</th>
-                        <th>Organization Code</th>
-                        <th>Organization Name</th>
-                        <th>Klinik</th>
+                        <th>Organization</th>
+                        <th>Role</th>
                         <th></th>
 
                     </tr>
@@ -40,17 +39,17 @@
     $(document).ready(function () {
 
         $('#btnAdd').click(function (e) {
-            window.location.href = "/MasterData/CreateOrEditOrganization";
+            window.location.href = "/MasterData/CreateOrEditRole";
         });
 
-        $('#tbOrganization').dataTable({
+        $('#tbRole').dataTable({
             "processing": true,
             "serverSide": true,
             "filter": true,
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/MasterData/GetOrganizationData",
+                "url": "/MasterData/GetRoleData",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -74,11 +73,6 @@
                 },
                 {
                     "targets": [3],
-                    "searchable": true,
-                    "orderable": false
-                },
-                {
-                    "targets": [4],
                     "searchable": false,
                     "orderable": false
                 }
@@ -86,12 +80,10 @@
 
             "columns": [
                 { "data": "Id", "name": "Id", "autoWidth": false },
-                { "data": "OrgCode", "name": "OrgCode", "autoWidth": true },
-                { "data": "OrgName", "name": "OrgName", "autoWidth": true },
-                { "data": "Klinik", "name": "Klinik", "autoWidth": true },
-
+                { "data": "OrganizationName", "name": "OrganizationName", "autoWidth": true },
+                { "data": "RoleName", "name": "RoleName", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>"; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditRole?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>"; }
                 }
 
 
@@ -110,23 +102,23 @@
         "showMethod": "fadeIn"
     };
 
-  
+
     var Delete = function (ID) {
         var txt;
         var r = confirm("Apakah anda yakin akan menghapus Organisasi dengan Id " + ID);
         if (r == true) {
-            DeleteOrganization(ID);
-        } 
+            DeleteRole(ID);
+        }
         return false;
     }
 
-    function DeleteOrganization(Id) {
+    function DeleteRole(Id) {
         $.ajax({
-            url: '/MasterData/DeleteMasterOrganisasi?id=' + Id,
+            url: '/MasterData/DeleteMasterRole?id=' + Id,
             type:'POST',
             success: function (result) {
                 if (result.Status == "SUCCESS" ) {
-                   
+
                     location.reload();
                     toastr.success(result.Message);
                 }
