Master User 50 Persen

--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -141,7 +141,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="pages-lock-screen.html">
+                                            <a href="@Url.Action("UserList","MasterData")">
                                                 User
                                             </a>
                                         </li>
