--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -137,12 +137,17 @@
                                         </li>
                                         <li>
                                             <a href="@Url.Action("RoleList","MasterData")">
-                                                Organization Role 
+                                                Organization Role
                                             </a>
                                         </li>
                                         <li>
                                             <a href="@Url.Action("UserList","MasterData")">
                                                 User
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="@Url.Action("EmployeeList","MasterData")">
+                                                Employee
                                             </a>
                                         </li>
                                     </ul>
