finish Map Role Privilege

--- a/Klinik.Web/Views/MasterData/OrganizationList.cshtml
+++ b/Klinik.Web/Views/MasterData/OrganizationList.cshtml
@@ -91,7 +91,7 @@
                 { "data": "Klinik", "name": "Klinik", "autoWidth": true },
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>"; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '">Edit</a>' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>" +  ' | <a class="btn btn-info" href="/MappingMaster/OrgPrivilegeList?orgid=' + full.Id + '">Set Privilege</a>'; }
                 }
 
 
