--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!doctype html>
+﻿@using Klinik.Web.Models.MasterData
+@using Klinik.Web.Features.MasterData.Menu;
+@using Klinik.Web.Models.Account;
+<!doctype html>
 <html class="fixed">
 <head>
 
@@ -67,9 +70,16 @@
                         <figure class="profile-picture">
                             <img src="~/Content/Octopus/assets/images/!logged-user.jpg" alt="Joseph Doe" class="img-circle" data-lock-picture="assets/images/!logged-user.jpg" />
                         </figure>
-                        <div class="profile-info" data-lock-name="John Doe" data-lock-email="johndoe@JSOFT.com">
-                            <span class="name">John Doe Junior</span>
-                            <span class="role">administrator</span>
+                        <div class="profile-info">
+                            @{
+
+                                if (Session["UserLogon"] != null)
+                                {
+                                    AccountModel account = (AccountModel)Session["UserLogon"];
+                                    <span class="name">@account.UserName</span>
+                                }
+                            }
+
                         </div>
 
                         <i class="fa custom-caret"></i>
@@ -79,13 +89,10 @@
                         <ul class="list-unstyled">
                             <li class="divider"></li>
                             <li>
-                                <a role="menuitem" tabindex="-1" href="pages-user-profile.html"><i class="fa fa-user"></i> My Profile</a>
+                                <a role="menuitem" tabindex="-1" href="@Url.Action("ChangePassword","PasswordHistory")"><i class="fa fa-key"></i> Change Password </a>
                             </li>
                             <li>
-                                <a role="menuitem" tabindex="-1" href="#" data-lock-screen="true"><i class="fa fa-lock"></i> Lock Screen</a>
-                            </li>
-                            <li>
-                                <a role="menuitem" tabindex="-1" href="pages-signin.html"><i class="fa fa-power-off"></i> Logout</a>
+                                <a role="menuitem" tabindex="-1" href="@Url.Action("Logout","Account")"><i class="fa fa-power-off"></i> Logout</a>
                             </li>
                         </ul>
                     </div>
@@ -112,46 +119,89 @@
                     <div class="nano-content">
                         <nav id="menu" class="nav-main" role="navigation">
                             <ul class="nav nav-main">
-                                <li class="nav-active">
-                                    <a href="index.html">
-                                        <i class="fa fa-home" aria-hidden="true"></i>
-                                        <span>Home</span>
-                                    </a>
-                                </li>
+                                @{
+                                    if (Session["UserLogon"] != null && Session["AuthMenu"] != null)
+                                    {
+                                        var authorize_menu = (List<MenuModel>)Session["AuthMenu"];
+                                        foreach (var item in authorize_menu)
+                                        {
+                                            //loop for parent
+                                            if (item.ParentMenuId == 0)
+                                            {
+                                                if (item.HasChild == false)
+                                                {
+                                                    <li>
+                                                        <a href="@Url.Action(item.Action,item.Controller)">
+                                                            <i class="@item.icon" aria-hidden="true"></i>
+                                                            <span> @item.Description </span>
+                                                        </a>
+                                                    </li>
+                                                }
+                                                else
+                                                {
+                                                    <li class="nav-parent">
+                                                        <a>
+                                                            <i class="@item.icon" aria-hidden="true"></i>
+                                                            <span> @item.Description </span>
+                                                        </a>
+                                                        <ul class="nav nav-children">
+                                                            @foreach (var child in authorize_menu.Where(x => x.ParentMenuId == item.Id))
+                                                            {
+                                                                <li>
+                                                                    <a href="@Url.Action(child.Action,child.Controller)">
+                                                                        @child.Description
+                                                                    </a>
+                                                                </li>
+                                                            }
 
-                                <li class="nav-parent">
-                                    <a>
-                                        <i class="fa fa-copy" aria-hidden="true"></i>
-                                        <span>Master Data</span>
-                                    </a>
-                                    <ul class="nav nav-children">
-                                        <li>
-                                            <a href="@Url.Action("OrganizationList","MasterData")">
-                                                Organization
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="@Url.Action("PrivilegeList","MasterData")">
-                                                Privilege
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="@Url.Action("RoleList","MasterData")">
-                                                Organization Role
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="@Url.Action("UserList","MasterData")">
-                                                User
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="@Url.Action("EmployeeList","MasterData")">
-                                                Employee
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
+                                                        </ul>
+                                                    </li>
+                                                }
+                                            }
+
+                                        }
+                                    }
+                                }
+                                @*<li class="nav-active">
+                                        <a href="index.html">
+                                            <i class="fa fa-home" aria-hidden="true"></i>
+                                            <span>Home</span>
+                                        </a>
+                                    </li>
+
+                                    <li class="nav-parent">
+                                        <a>
+                                            <i class="fa fa-copy" aria-hidden="true"></i>
+                                            <span>Master Data</span>
+                                        </a>
+                                        <ul class="nav nav-children">
+                                            <li>
+                                                <a href="@Url.Action("OrganizationList","MasterData")">
+                                                    Organization
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="@Url.Action("PrivilegeList","MasterData")">
+                                                    Privilege
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="@Url.Action("RoleList","MasterData")">
+                                                    Organization Role
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="@Url.Action("UserList","MasterData")">
+                                                    User
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="@Url.Action("EmployeeList","MasterData")">
+                                                    Employee
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </li>*@
 
                             </ul>
                         </nav>
@@ -180,7 +230,7 @@
                 <div>
                     @RenderBody()
                 </div>
-               
+
             </section>
         </div>
 
@@ -188,8 +238,8 @@
     </section>
 
     <!-- Vendor -->
-    
-   
+
+
     <script src="~/Content/Octopus/assets/vendor/jquery-browser-mobile/jquery.browser.mobile.js"></script>
     <script src="~/Content/Octopus/assets/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="~/Scripts/DataTables/jquery.dataTables.js"></script>
@@ -252,7 +302,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-           
+
         });
     </script>
 </body>
