Updated form title to differentiate add and edit action

--- a/Klinik.Web/Views/MasterData/CreateOrEditEmployee.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditEmployee.cshtml
@@ -15,7 +15,7 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">Form Tambah Employee</h5>
+        <h5 class="panel-title">Form @ViewBag.ActionType Employee</h5>
     </header>
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditEmployee">
