--- a/Klinik.Web/Views/MasterData/CreateOrEditRole.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditRole.cshtml
@@ -13,7 +13,7 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">Form Tambah Role</h5>
+        <h5 class="panel-title">Form @ViewBag.ActionType Role</h5>
     </header>
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditRole">
