--- a/Klinik.Web/Views/MasterData/CreateOrEditOrganization.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditOrganization.cshtml
@@ -14,7 +14,7 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">Form Tambah Organisasi</h5>
+        <h5 class="panel-title">Form @ViewBag.ActionType Organisasi</h5>
     </header>
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditOrganization">
