--- a/Klinik.Web/Views/MasterData/CreateOrEditPrivilege.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditPrivilege.cshtml
@@ -12,7 +12,7 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">Form Tambah Privilege</h5>
+        <h5 class="panel-title">Form @ViewBag.ActionType Privilege</h5>
     </header>
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditPrivilege">
