Added forgot password feature

--- a/Klinik.Web/Views/Account/Login.cshtml
+++ b/Klinik.Web/Views/Account/Login.cshtml
@@ -61,7 +61,7 @@
                             </label>
                         </div>
                         <div>
-                            <a href="#" class="txt1">
+                            <a href="@Url.Action("ForgotPassword","Account")" class="txt1">
                                 Forgot Password?
                             </a>
                         </div>
