Added dummy favicon

--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <!-- Basic -->
     <meta charset="UTF-8">
 
-    <title>SISTEM INFORMASI KLINIK</title>
+    <title>Sistem Informasi Klinik</title>
     <meta name="keywords" content="Sistem Klinik" />
     <meta name="description" content="Medical Management System">
     <meta name="author" content="CV Mandiri">
@@ -21,6 +21,7 @@
     <!-- Vendor CSS -->
     <link href="~/Content/Octopus/assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/font-awesome.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/Content/images/favicon.ico" />
     <link href="~/Content/Octopus/assets/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" />
     <link href="~/Content/Octopus/assets/vendor/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" />
 
@@ -53,7 +54,7 @@
         <header class="header">
             <div class="logo-container">
                 <a href="/Home/Index" class="logo">
-                    <img src="~/Content/images/logo.png" height="35" alt="JSOFT Admin" />
+                    <img src="~/Content/images/logo-medica.png" height="35" alt="JSOFT Admin" />
                 </a>
 
                 <div class="visible-xs toggle-sidebar-left" data-toggle-class="sidebar-left-opened" data-target="html" data-fire-event="sidebar-left-opened">
