Updated the placeholder for organization code

--- a/Klinik.Web/Views/Account/Login.cshtml
+++ b/Klinik.Web/Views/Account/Login.cshtml
@@ -55,7 +55,7 @@
 
                     <div class="wrap-inputMMS validate-input m-b-26" data-validate="Organization is required">
                         <span class="label-inputMMS">Organization</span>
-                        @Html.TextBoxFor(x => x.Organization, null, new { @class = "inputMMS", @id = "tbOrganization", @placeholder = "Enter Organization" })
+                        @Html.TextBoxFor(x => x.Organization, null, new { @class = "inputMMS", @id = "tbOrganization", @placeholder = "Enter Organization Code" })
                         <span class="focus-inputMMS"></span>
                     </div>
 
