Finishing and implement command logging

--- a/Klinik.Web/Views/MasterData/CreateOrEditOrganization.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditOrganization.cshtml
@@ -35,7 +35,7 @@
             </div>
 
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Organization Name</label>
+                <label class="col-md-2 control-label" for="inputDefault">Clinic Name</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(p => p.KlinikID, (IEnumerable<SelectListItem>)ViewBag.clinics, new { @class = "form-control", @id = "ddlclinics" })
                 </div>
