--- a/Klinik.Web/Views/Account/Login.cshtml
+++ b/Klinik.Web/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <html lang="en">
 <head>
-    <title>MMS Login Page</title>
+    <title>Medica Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
