--- a/Klinik.Web/Views/MasterData/CreateOrEditClinic.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditClinic.cshtml
@@ -14,7 +14,7 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">Form Tambah Clinic</h5>
+        <h5 class="panel-title">Form @ViewBag.ActionType Clinic</h5>
     </header>
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditClinic">
@@ -34,9 +34,6 @@
 
                 </div>
             </div>
-
-
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     Legal No
@@ -141,29 +138,30 @@
             changeMonth: true,
             changeYear: true
         });
-    var _status, _message, _temp;
-    var _arrMsg = [];
 
         toastr.options = {
-            "closeButton": true,
+            "closeButton": false,
             "positionClass": "toast-top-full-width",
             "onclick": null,
             "showDuration": "0",
             "hideDuration": "0",
-            "timeOut": "0",
+            "timeOut": "2000",
             "showMethod": "fadeIn"
         };
 
-    _temp="@ViewBag.Response";
+        var _temp="@ViewBag.Response";
+        var _arrMsg = _temp.split(";");
 
-    _arrMsg = _temp.split(";");
-
-    if (_arrMsg[0] == "SUCCESS") {
-        toastr.success(_arrMsg[1]);
-    }
-    else if (_arrMsg[0] == "ERROR") {
-        toastr.error(_arrMsg[1]);
-    }
+        if (_arrMsg.length > 1) {
+            if (_arrMsg[0] == "True") {
+                toastr.success(_arrMsg[1]);
+            }
+            else {
+                toastr.options.closeButton = true;
+                toastr.options.timeOut = 0;
+                toastr.error(_arrMsg[1]);
+            }
+        }
     });
 
 </script>
