--- a/Klinik.Web/Views/MasterData/CreateOrEditUser.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditUser.cshtml
@@ -35,7 +35,6 @@
                     @Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">UserName</label>
                 <div class="col-md-4">
@@ -43,7 +42,6 @@
                     @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     Password
@@ -53,7 +51,6 @@
                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     Expired Date
@@ -63,7 +60,6 @@
 
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     Status
@@ -73,8 +69,6 @@
 
                 </div>
             </div>
-
-
             <br />
             <footer class="panel-footer">
                 <button type="submit" class="btn btn-primary">Simpan </button>
@@ -96,29 +90,30 @@
             changeMonth: true,
             changeYear: true
         });
-    var _status, _message, _temp;
-    var _arrMsg = [];
 
         toastr.options = {
-            "closeButton": true,
+            "closeButton": false,
             "positionClass": "toast-top-full-width",
             "onclick": null,
             "showDuration": "0",
             "hideDuration": "0",
-            "timeOut": "0",
+            "timeOut": "2000",
             "showMethod": "fadeIn"
         };
 
-    _temp="@ViewBag.Response";
+        var _temp="@ViewBag.Response";
+        var _arrMsg = _temp.split(";");
 
-    _arrMsg = _temp.split(";");
-
-    if (_arrMsg[0] == "SUCCESS") {
-        toastr.success(_arrMsg[1]);
-    }
-    else if (_arrMsg[0] == "ERROR") {
-        toastr.error(_arrMsg[1]);
-    }
+        if (_arrMsg.length > 1) {
+            if (_arrMsg[0] == "True") {
+                toastr.success(_arrMsg[1]);
+            }
+            else {
+                toastr.options.closeButton = true;
+                toastr.options.timeOut = 0;
+                toastr.error(_arrMsg[1]);
+            }
+        }
     });
 
 </script>
